<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:theme="@style/mystyle">

    <item android:id="@+id/action_search"
        android:title="@string/bottomnav_categories"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_navigation"
        android:title="@string/bottomnav_map"
        android:icon="@drawable/ic_pin_drop_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_quicklinks"
        android:icon="@drawable/ic_grade_black_24dp"
        android:title="@string/bottomnav_quicklinks"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_info"
        android:title="@string/bottomnav_info"
        android:icon="@drawable/ic_info_black_24dp"
        app:showAsAction="ifRoom"/>
</menu>