<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2FAECE"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/splashLogoDescription"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_school_splash" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/splashtitle"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:indeterminateDrawable="@drawable/spinner"
        android:indeterminate="true"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/dataIsLoading"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />


</LinearLayout>